--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_5/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_5/css/invessenceCustom.css
@@ -4400,7 +4400,7 @@ span.external_link_click:hover {
 .acc_holder_form .go-bottom textarea:focus + label ,
 .acc_holder_form  .go-bottom textarea:not(:placeholder-shown):valid ~ label
 {
-    margin-top: -26px;
+    margin-top: -26px;z-index:1;
 
 }
 
@@ -4420,6 +4420,7 @@ span.external_link_click:hover {
     top: 41%;
     z-index:0;
 }
+.trading_select Container40{width:100%;}
 .go-bottom label {
     transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
     position: absolute;
@@ -4459,7 +4460,7 @@ span.external_link_click:hover {
   opacity: 1;
 } */
 .go-bottom div {
-    position: relative;
+    position: relative;float:left;
 }
 .go-bottom label {
     opacity: 0;
@@ -4521,10 +4522,10 @@ span.external_link_click:hover {
 }
 .Container25 .ui-selectonemenu
 {
-    width: 116%;
+    width: 116%;float:left;
 }
 .Container20 .ui-selectonemenu,.Container30 .ui-selectonemenu{
-    width:100%;
+    width:100%;float:left;
 }
 .go-bottom .ui-selectonemenu .ui-selectonemenu-label {
     opacity: 1;
@@ -4599,7 +4600,10 @@ span.external_link_click:hover {
 .date_birth span.ui-button-text {
     background: #a4332f;
     height: 24px;
+    width:45px;
 }
+.date_birth .ui-datepicker-trigger {
+    z-index: 1;}
 .ui-datepicker-calendar tbody tr .ui-datepicker-current-day
 {
     background-color:  #a4332f;
@@ -4681,9 +4685,10 @@ span.external_link_click:hover {
     box-shadow: 1px 1px 5px 1px #efefef;
 
 }
-.panel_close {
+.go-bottom .panel_close {
     position: absolute;
-    top: -10px;
+    top: 3px;
+    right: 7px;
 }
 .panel_close span:before {
 
@@ -4832,6 +4837,7 @@ td.bullet_td span {
 .margin-left {
     margin-left: 10px;
 }
+
 .acc_holder_form .ui-tabs-top,
 .acc_holder_form .ui-helper-reset {
     background: #fff;
@@ -4977,6 +4983,7 @@ span.input_value {
     box-shadow: none;
     font-size: 16px !important;
     font-weight: bold !important;
+
     color: #a4332f !important;
     font-family: 'helvetica' !important;
     padding: 0 5px !important;
